summoning weapon item and recipe

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -851,6 +851,7 @@
       - 干缩腐尸
     2:
       items:
+      - 突变松露:1:1:0.3333
       - 硫海遗爵之鳞:1:1:0.1
       - 铂金币:4
       - 至尊治疗药水:5:15
@@ -892,10 +893,13 @@
   星流巨械:
     1:
       giveAllItems: false
+      amountToGive: 2
       items:
       - 光子撕裂者
       - 塔纳托斯的脊柱
       - 煌晖御流炮
+      - 阿瑞斯外骨骼
+      - 擎天军用信标
     2:
       items:
       - 嘉登之心
@@ -911,6 +915,7 @@
       - 狞桀
       - 异端
       - 永劫
+      - 恂戒
       - 恣睢
     2:
       items:
