minions and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -898,3 +898,9 @@
 远古岩鲨:
     buffInflict:
         - "碎甲|30|0.33"
+元素斧头:
+    buffInflict:
+        - "元素谐鸣|40|1"
+小星宇神卫:
+    buffInflict:
+        - "弑神怒焰|40|1"
