--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -9331,6 +9331,18 @@ Dodu的手炮:
     manaUse: 10
   worth: 12000000
   rarity: 8
+干缩腐尸:
+  item: DIAMOND_SWORD
+  lore:
+  - §r在地面上召唤一个恶心的，喷吐鲨鱼的硫海遗爵的头
+  attributes:
+    damage: 768
+    damageType: Summon
+    knockback: 4
+    useTime: 13
+    manaUse: 10
+  worth: 26000000
+  rarity: 13
 史莱姆法杖:
   item: WOOD_SWORD
   lore:
@@ -10372,7 +10384,6 @@ Dodu的手炮:
     manaUse: 60
   worth: 40000000
   rarity: 16
-####
 鞭炮:
   item: DIAMOND_SWORD
   attributes:
