--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -288,6 +288,10 @@ spawnInfo:
     冰霜月19:
         雪兽: 1
 mobTier:
+    哥布林苦力: 克苏鲁之眼
+    哥布林盗贼: 克苏鲁之眼
+    哥布林战士: 克苏鲁之眼
+    哥布林弓箭手: 克苏鲁之眼
     肉后巨像蛤: 血肉之墙
     妖精: 血肉之墙
     独角兽: 血肉之墙
